# Space-Invaders

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
include/UI/: ui.h
include/core/: game.h  game_object.h  resource_ids.h
include/game_objects/: alien.h  barrier.h  bullet.h  player.h
include/managers/: resource_manager.h
src/: main.cpp  player.cpp
src/UI/: ui.cpp
src/core/: game.cpp  game_object.cpp
src/game_objects/: alien.cpp  barrier.cpp  bullet.cpp  player.cpp
src/managers/: resource_manager.cpp
